--- a/SalesManagement/SalesManagement.csproj
+++ b/SalesManagement/SalesManagement.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="MySql.Data" Version="8.0.19" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Home\Login.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
